k8s/deployment.yaml
# -------------------------------
# Deployment
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditorium-booking-frontend
  namespace: project-namespace
  labels:
    app: auditorium-booking-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auditorium-booking-frontend
  progressDeadlineSeconds: 1200
  template:
    metadata:
      labels:
        app: auditorium-booking-frontend
    spec:
      containers:
      - name: frontend
        image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/project-namespace/auditorium-booking-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
      imagePullSecrets:
      - name: nexus-credentials
      restartPolicy: Always

---
# -------------------------------
# Service
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: auditorium-booking-frontend-service
  namespace: project-namespace
spec:
  type: ClusterIP
  selector:
    app: auditorium-booking-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# -------------------------------
# Ingress
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auditorium-booking-frontend-ingress
  namespace: project-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: auditorium.imcc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auditorium-booking-frontend-service
            port:
              number: 80
